--- a/package.json
+++ b/package.json
@@ -28,9 +28,13 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/schedule": "^6.0.1",
     "@nestjs/typeorm": "^11.0.0",
+    "@types/express-session": "^1.18.2",
+    "@types/hbs": "^4.0.5",
     "axios": "^1.13.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "express-session": "^1.18.2",
+    "hbs": "^4.2.0",
     "mysql2": "^3.15.3",
     "nestjs-telegraf": "^2.9.1",
     "reflect-metadata": "^0.2.2",
