Add automated deployment with GitHub Actions
- Fix GitHub Actions workflow (use appleboy/ssh-action with correct secrets)
- Add healthcheck to docker-compose for app and mysql
- Add automatic DB backups script (every 12 hours)
- Add SSL certificate renewal script
- Add manual deployment script
- Add deployment documentation
- Improve security (MySQL and app only on localhost)

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,43 +1,113 @@
-name: Deploy to Remote
+name: Deploy to Production
 
 on:
   push:
     branches:
       - main
+  workflow_dispatch:
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
-
+    
     steps:
-      - name: Checkout
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Deploy over SSH
+      - name: Deploy to server
         uses: appleboy/ssh-action@v1.0.0
         with:
-          host: ${{ secrets.DEPLOY_HOST }}
-          username: ${{ secrets.DEPLOY_USER }}
-          key: ${{ secrets.DEPLOY_SSH_KEY }}
-          port: ${{ secrets.DEPLOY_PORT || '22' }}
-          envs: DEPLOY_PATH=${{ secrets.DEPLOY_PATH }}
-          script: |
-            set -euo pipefail
-
-            if [ -z "$DEPLOY_PATH" ]; then
-              echo "DEPLOY_PATH secret is not defined."
-              exit 1
-            fi
-
-            if [ ! -d "$DEPLOY_PATH/.git" ]; then
-              echo "Repository not found at $DEPLOY_PATH. Cloning..."
-              git clone git@github.com:temakulakov/bx-tg-notify.git "$DEPLOY_PATH"
-            fi
-
-            cd "$DEPLOY_PATH"
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USER }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          port: 22
+          envs: DB_USER,DB_PASS,DB_NAME,BX24_OUTGOING_TOKEN,BX24_INCOMING_TOKEN,BX24_INCOMING_USER,BX24_DOMAIN,TELEGRAM_BOT_TOKEN,APP_DIR
+          script_stop: true
+        env:
+          DB_USER: ${{ secrets.DB_USER }}
+          DB_PASS: ${{ secrets.DB_PASS }}
+          DB_NAME: ${{ secrets.DB_NAME }}
+          BX24_OUTGOING_TOKEN: ${{ secrets.BX24_OUTGOING_TOKEN }}
+          BX24_INCOMING_TOKEN: ${{ secrets.BX24_INCOMING_TOKEN }}
+          BX24_INCOMING_USER: ${{ secrets.BX24_INCOMING_USER }}
+          BX24_DOMAIN: ${{ secrets.BX24_DOMAIN }}
+          TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+          APP_DIR: ${{ secrets.APP_DIR || '/root/bx-tg-notify' }}
+        script: |
+            set -e
+            cd ${APP_DIR:-/root/bx-tg-notify}
+            
+            # Сохраняем текущую версию для отката
+            CURRENT_COMMIT=$(git rev-parse HEAD 2>/dev/null || echo "none")
+            echo "CURRENT_COMMIT=$CURRENT_COMMIT" > /tmp/rollback_info
+            
+            # Получаем последние изменения
             git fetch origin
             git reset --hard origin/main
+            
+            # Создаем .env файл из секретов
+            cat > .production.env << EOF
+          NODE_ENV=production
+          
+          DB_HOST=mysql
+          DB_PORT=3306
+          DB_USER=${DB_USER}
+          DB_PASS=${DB_PASS}
+          DB_NAME=${DB_NAME}
+          
+          BX24_OUTGOING_TOKEN=${BX24_OUTGOING_TOKEN}
+          BX24_INCOMING_TOKEN=${BX24_INCOMING_TOKEN}
+          BX24_INCOMING_USER=${BX24_INCOMING_USER}
+          BX24_DOMAIN=${BX24_DOMAIN}
+          
+          TELEGRAM_BOT_TOKEN=${TELEGRAM_BOT_TOKEN}
+          
+          APP_PORT=3000
+          EOF
+            
+            # Останавливаем контейнеры
+            docker compose --profile production down || true
+            
+            # Собираем и запускаем
+            ENV_FILE=.production.env docker compose --profile production up -d --build
+            
+            # Ждем готовности
+            echo "Waiting for services to be healthy..."
+            sleep 15
+            
+            # Проверяем здоровье контейнеров
+            if ! docker compose --profile production ps | grep -q "healthy"; then
+              echo "Health check failed, rolling back..."
+              
+              # Откат к предыдущей версии
+              if [ "$CURRENT_COMMIT" != "none" ]; then
+                git reset --hard $CURRENT_COMMIT
+                ENV_FILE=.production.env docker compose --profile production up -d --build
+              else
+                docker compose --profile production down
+              fi
+              
+              exit 1
+            fi
+            
+            # Проверяем что приложение отвечает
+            sleep 5
+            if ! curl -f http://localhost:3000/health > /dev/null 2>&1; then
+              echo "Application health check failed, rolling back..."
+              
+              if [ "$CURRENT_COMMIT" != "none" ]; then
+                git reset --hard $CURRENT_COMMIT
+                ENV_FILE=.production.env docker compose --profile production up -d --build
+              else
+                docker compose --profile production down
+              fi
+              
+              exit 1
+            fi
+            
+            echo "Deployment successful!"
 
-            ENV_FILE=.production.env docker compose --env-file .production.env --profile production down
-            ENV_FILE=.production.env docker compose --env-file .production.env --profile production up --build -d
-
+      - name: Notify on failure
+        if: failure()
+        run: |
+          echo "Deployment failed! Check logs on server."
