--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -94,11 +94,12 @@ jobs:
               sleep 2
             done
             
-            # Проверяем что MySQL создал пользователя правильно и даем доступ с любого хоста
-            echo "Verifying and fixing MySQL user permissions..."
+            # Исправляем права пользователя MySQL для доступа из Docker сети
+            echo "Configuring MySQL user permissions for Docker network..."
             sleep 5
             docker compose --profile production exec -T mysql mysql -uroot -p"${DB_PASS}" <<EOF 2>/dev/null || echo "Warning: Could not configure MySQL user"
-            GRANT ALL PRIVILEGES ON ${DB_NAME}.* TO '${DB_USER}'@'%' IDENTIFIED BY '${DB_PASS}';
+            CREATE USER IF NOT EXISTS '${DB_USER}'@'%' IDENTIFIED BY '${DB_PASS}';
+            GRANT ALL PRIVILEGES ON ${DB_NAME}.* TO '${DB_USER}'@'%';
             FLUSH PRIVILEGES;
             SELECT User, Host FROM mysql.user WHERE User='${DB_USER}';
 EOF
