--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 services:
   app:
     build: .
@@ -29,16 +27,16 @@ services:
     env_file:
       - ${ENV_FILE:-.development.env}
     environment:
-      MYSQL_ROOT_PASSWORD: ${DB_PASS} # root пароль
-      MYSQL_DATABASE: ${DB_NAME} # база данных
-      MYSQL_USER: ${DB_USER} # пользователь
-      MYSQL_PASSWORD: ${DB_PASS} # пароль пользователя
+      MYSQL_ROOT_PASSWORD: "${DB_PASS}" # root пароль
+      MYSQL_DATABASE: "${DB_NAME}" # база данных
+      MYSQL_USER: "${DB_USER}" # пользователь
+      MYSQL_PASSWORD: "${DB_PASS}" # пароль пользователя
     ports:
       - "127.0.0.1:${DB_PORT:-3306}:3306" # доступен только на localhost для безопасности
     volumes:
       - db_data:/var/lib/mysql
     healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-p${DB_PASS}"]
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-uroot", "-p$${DB_PASS}"]
       interval: 10s
       timeout: 5s
       retries: 5
