Add AppController to module and clean APP_URL trailing slash
- Add AppController to AppModule controllers array
- Clean trailing slash from APP_URL in deployment script

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -61,7 +61,9 @@ jobs:
             echo "TELEGRAM_BOT_TOKEN=${TELEGRAM_BOT_TOKEN}"
             echo ""
             echo "APP_PORT=3000"
-            echo "APP_URL=${APP_URL:-https://shebo.h512.ru}"
+            # Убираем trailing slash из APP_URL если есть
+            APP_URL_CLEANED=$(echo "${APP_URL:-https://shebo.h512.ru}" | sed 's/\/$//')
+            echo "APP_URL=${APP_URL_CLEANED}"
             } > .production.env
             
             # Проверяем что файл создан (без показа паролей)
